--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2 class="text-warning text-center">About Me</h2>
    
     <p>Eager computer science student with a passion for software development, Proficient in Full Stack Development. Strong communication
- and problem-solving skills. Looking for position in good organization
+ and problem-solving skills, combined with proficiency in data structures and algorithms. Looking for position in good organization
  that values dedication and attention to detail.Ready to contribute to Innovative projects.</p>
         <a href="images\VardhanReddyResume.pdf" target="_blank">View My Resume</a>
 
